--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-email/components": "^0.0.33",
+    "bcryptjs": "^3.0.2",
     "mongoose": "^8.12.1",
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "resend": "^4.1.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
