--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bcryptjs": "^3.0.2",
     "mongoose": "^8.12.1",
     "next": "14.0.4",
+    "next-auth": "^4.24.11",
     "react": "^18",
     "react-dom": "^18",
     "resend": "^4.1.2",
