--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^4.1.3",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "^1.1.3",
     "@react-email/components": "^0.0.33",
     "axios": "^1.8.3",
     "bcryptjs": "^3.0.2",
@@ -25,6 +28,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.54.2",
     "resend": "^4.1.2",
+    "sass": "^1.86.0",
     "sonner": "^2.0.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
